@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-12T00:46:12Z",
-  "count_outdated" : 809,
-  "uniques_outdated" : 419,
-  "count" : 812,
-  "uniques" : 422,
+  "timestamp" : "2024-10-13T00:52:10Z",
+  "count_outdated" : 810,
+  "uniques_outdated" : 420,
+  "count" : 813,
+  "uniques" : 423,
   "clones" : [
-    {
-      "timestamp": "2024-09-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-08T00:00:00Z",
       "count": 1,
@@ -25,6 +16,15 @@
     },
     {
       "timestamp": "2024-10-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
