@@ -3,17 +3,17 @@
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2024-09-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-10-08T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
       "timestamp": "2024-10-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-10-12T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
