@@ -1,3 +1,12 @@
+2024-10-13T00:52:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11310080017 # 447
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-13
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 419 809 / 422 812
+* notice: next accum: outdated-unq outdated-all / unq all: 420 810 / 423 813
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-09-29] / [2024-10-12]
+
 2024-10-12T00:46:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11301206090 # 446
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-12
